# protopeek

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  Dockerfile  Justfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.bws.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: proto-config.md  proto-delete.md  proto-feedback.md  proto-list.md  proto-status.md  proto-up.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
accounts/: adapters.py  admin.py  api.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_default_allow_domain_user_is_provisional.py  0003_rename_apikey_to_devicetoken.py
accounts/tests/: test_account_ui.py  test_onboarding.py
common/: email.py  skills_version.py
common/tests/: test_skills_version.py
config/: api.py  celery.py  health.py  settings.py  urls.py
dev_setup/: docker-compose.yml
examples/: lane-board.html  tempo-dashboard.html  tempo-pricing.html
feedback/: admin.py  api.py  models.py
feedback/migrations/: 0001_initial.py  0002_annotationshot.py
pages/: context_processors.py  urls.py  views.py
pages/tests/: test_agent.py
prototypes/: admin.py  allowlist.py  api.py  identity.py  models.py  shotlinks.py  tasks.py  urls.py  views.py
prototypes/migrations/: 0001_initial.py  (+1 more)
scripts/: dns_setup.py
siteconfig/: conf.py  context_processors.py  registry.py
templates/: 400.html  403.html  404.html  500.html  _error_base.html  base.html
(+54 files in other folders)
